--- a/css.styles.css
+++ b/css.styles.css
@@ -1,8 +1,11 @@
-/* common */
+@media (min-width: 600px) and (max-width: 800px) {
 body {
   margin: 0;
   color: rgb(77, 72, 72)
+}  
 }
+/* common */
+
 
 img {
   vertical-align: bottom;
