--- a/css.styles.css
+++ b/css.styles.css
@@ -1,11 +1,16 @@
-@media (min-width: 600px) and (max-width: 800px) {
+/* common */
+/* small screen */
 body {
   margin: 0;
   color: rgb(77, 72, 72)
 }  
-}
-/* common */
 
+header .container {
+   margin: 0 auto;
+   display: flex;
+   align-items: center;
+   background: pink;
+}
 
 img {
   vertical-align: bottom;
@@ -66,6 +71,7 @@ main .container {
   width: 600px;
   margin: 0 auto; 
   padding-bottom: 60px;
+  background:rgb(77, 72, 72);
 }
 
 main h1 {
@@ -100,5 +106,16 @@ main section + section {
 footer {
   padding: 60px 0;
   text-align: center;
+}
+
+
+/* medium screen */
+@media (min-width: 600px) {
+
+}
+
+/* large screen */
+@media (min-width: 800px) {
+
 }
 
