--- a/css.styles.css
+++ b/css.styles.css
@@ -10,7 +10,7 @@ header .container {
    margin: 0 auto;
    display: flex;
    align-items: center;
-   background: pink;
+   background: rgb(255, 207, 215);
 }
 
 p {
@@ -43,7 +43,7 @@ header .container {
 }
 
 header .container div + div {
-  margin-left: 32px;
+  margin-left: 28px;
 }
 
 header h1 {
