--- a/css.styles.css
+++ b/css.styles.css
@@ -1,4 +1,3 @@
-
 /* common */
 /* small screen */
 body {
@@ -6,12 +5,13 @@ body {
   color: rgb(77, 72, 72)
 }  
 
+header {
+  padding-top: 20px;
+}
+
 header .container {
-  padding-top:20px;
-   margin: 0 auto;
    display: flex;
    align-items: center;
-   background: rgb(255, 207, 215);
 }
 
 p {
@@ -30,7 +30,7 @@ p {
 /* header */
 
 header {
-  background: rgb(255, 207, 215);
+  background: #FBE5E7;
   font-family:Georgia, 'Times New Roman', Times, serif;
   font-style: italic;
   color: rgb(77, 72, 72);
@@ -39,8 +39,8 @@ header {
 header .container {
   width: 400px;
   margin: 0 auto;
-  display: flex;
-  align-items: center;
+  /* display: flex; */
+  /* align-items: center; */
 }
 
 header .container div + div {
@@ -53,7 +53,7 @@ header h1 {
 
 header ul {
   list-style: none;
-  margin: 20 auto;
+  margin: 0 auto;
   padding: 0;
   display: flex;
 }
@@ -63,7 +63,8 @@ header ul li + li {
 }
 
 header p {
-  margin-top: 16px;
+  margin-top: 8px;
+  margin-bottom: 6px;
   text-align: center;
   font-family: none;
 }
