--- a/css.styles.css
+++ b/css.styles.css
@@ -30,7 +30,7 @@ p {
 /* header */
 
 header {
-  background: #FBE5E7;
+  background: #D9AACD;
   font-family:Georgia, 'Times New Roman', Times, serif;
   font-style: italic;
   color: rgb(77, 72, 72);
